# simuEM

./: .gitignore  CMakeLists.txt  LocalConfig.cmake.template  ProjectConfig.cmake.in  readme.md
config/: config.h.in
data/plot_script/: l2_error.py
scripts/: hybrid_mesh_test.geo  test_cc.geo  test_cc.msh  test_cc_0.geo  test_cc_0.msh  test_cc_1.geo  test_cc_10.geo  test_cc_2.geo  test_cc_2.msh  test_cc_2_03.geo  test_cc_3.geo  test_cc_4.geo  test_cc_5.geo  test_cc_6.geo  test_cc_7.geo  test_cc_8.geo  test_cc_9.geo  test_cc_fine.geo  test_cube.geo  test_cube.msh  test_cube_0.geo  test_cube_0.msh  test_cube_1.geo  test_cube_2.geo  test_cube_3.geo  test_cube_4.geo  test_cube_5.geo  test_cube_6.geo  test_mesh_0.geo  test_mesh_0.msh  test_mesh_0_fine_v2.2.msh  test_mesh_0_v2.2.geo  test_mesh_0_v2.2.msh
solver/: CMakeLists.txt
solver/include/entity/: element.h  info.h  node.h  tetrahedron.h
solver/include/entity/mesh/: e__transformation.h  e_collection.h  e_edge.h  e_tetrahedron.h  e_triangle.h  element.h  mesh.h  mesh_filter.h  mesh_parser.h  node.h  tetrahedron.h
solver/include/entity/property/: coefficient.h  material.h  property.h
solver/include/math/: assemble.h  data_format.h  matrix.h  ref_coord.h
solver/include/math/dof/: dof_hash.h  dof_manager.h
solver/include/math/fem/: H1_tetrahedron.h  Hcurl_tetrahedron.h  assemble.h  assemble_data.h  assemble_mat.h  assemble_vec.h  bc_dirichlet.h  block.h  block_rack.h  dof_handler.h  element_data.h  fem_space.h  fem_system.h  fem_util.h  integration.h  integrator.h  integrator_a.h  integrator_l.h  operation.h  operation_collection.h  post_processing.h  shape.h  space_H1.h  space_Hcurl.h  space_collection.h  transformation.h
solver/include/math/field/: field.h  field_collection.h  field_constant.h  field_fespace.h  field_function.h  field_util.h  field_visualizer.h
solver/include/math/operator/: integration.h  integrator.h  integrator_a.h  integrator_l.h  interpolator.h  operator.h  operator_collection.h  operator_util.h
solver/include/math/operator/quadrature/: legendre_rule.h
solver/include/physics/electromagnetism/: eddy_current.h  mfem_eddy_current.h
solver/include/physics/electromagnetism/formulation/: T_Omega.h
solver/include/utils/: logger.h  string_utils.h  terminal.h  util_constant.h  util_hash.h  util_la.h  util_math.h  util_petsc.h  util_string.h
solver/include/visualizer/: app_window.h
solver/include/world/mesh/: e__transformation.h  e_collection.h  e_edge.h  e_tetrahedron.h  e_triangle.h  element.h  group_key.h  mesh.h  node.h
solver/include/world/property/: coefficient.h
solver/include/world/structure/: domain.h  structure.h
solver/src/app/: CMakeLists.txt  main.cpp  main_GUI.cpp
solver/src/entity/: CMakeLists.txt  element.cpp  tetrahedron.cpp
solver/src/entity/mesh/: CMakeLists.txt  e__transformation.cpp  e_edge.cpp  e_tetrahedron.cpp  e_triangle.cpp  element.cpp  info.cpp  mesh.cpp  mesh_parser.cpp  mesh_reader.cpp  tetrahedron.cpp
solver/src/math/: CMakeLists.txt  integration.cpp
solver/src/math/dof/: CMakeLists.txt  dof_hash.cpp  dof_manager.cpp
solver/src/math/fem/: CMakeLists.txt  assemble_data.cpp  bc_dirichlet.cpp  block.cpp  block_rack.cpp  element_data.cpp  fem_space.cpp  fem_system.cpp  integration.cpp  integrator.cpp  integrator_a.cpp  integrator_l.cpp  operation.cpp  space_H1.cpp  space_Hcurl.cpp  transformation.cpp
solver/src/math/field/: CMakeLists.txt  field.cpp  field_constant.cpp  field_fespace.cpp  field_function.cpp  field_visualizer.cpp
solver/src/math/operator/: CMakeLists.txt  integration.cpp  integrator_a.cpp  integrator_l.cpp  interpolator.cpp  operator.cpp
solver/src/math/operator/quadrature/: CMakeLists.txt  legendre_rule.c
solver/src/physics/: CMakeLists.txt
solver/src/physics/electromagnetism/: CMakeLists.txt  eddy_current.cpp  mfem_eddy_current.cpp
solver/src/physics/electromagnetism/formulation/: CMakeLists.txt  T_Omega.cpp
solver/src/utils/: CMakeLists.txt  gmsh_reader.cpp  logger.cpp  util_hash.cpp  util_la.cpp  util_petsc.cpp
solver/src/visualizer/: CMakeLists.txt  app_window.cpp
solver/src/world/mesh/: CMakeLists.txt  e__transformation.cpp  e_edge.cpp  e_tetrahedron.cpp  e_triangle.cpp  element.cpp  mesh.cpp  mesh_parser.cpp
tests/: CMakeLists.txt
tests/CurlCurl/: CMakeLists.txt  CurlCurl.cpp  CurlCurl.h
tests/Poisson/: CMakeLists.txt  Poisson.cpp  Poisson.h
visualizer/: CMakeLists.txt
visualizer/src/: CMakeLists.txt  app_window.cpp
visualizer/src/app/: CMakeLists.txt  main_GUI.cpp
